--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -14,6 +14,17 @@ msgctxt "error:billing.premium.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
+msgctxt "error:document.create:"
+msgid ""
+"Error while generating the letter:\n"
+"\n"
+"  Expression:\n"
+"%s\n"
+"\n"
+"  Error:\n"
+"%s"
+msgstr "Erreur lors de la génération de la lettre:"
+
 msgctxt "error:document.receive.attach:"
 msgid "Duplicate name on attachments : %s"
 msgstr "Nom dupliqués sur les pièces jointe : %s"
@@ -2518,6 +2529,10 @@ msgctxt "model:ir.action,name:act_extra_premium_kind"
 msgid "Extra Premium Kind"
 msgstr "Type de surprime"
 
+msgctxt "model:ir.action,name:act_insurer_form"
+msgid "Insurers"
+msgstr "Assureurs"
+
 msgctxt "model:ir.action,name:act_item_desc_form"
 msgid "Item Descriptions"
 msgstr "Descriptions des Risques"
@@ -2535,12 +2550,20 @@ msgid "Letter Report"
 msgstr ""
 
 msgctxt "model:ir.action,name:letter_generation_wizard"
-msgid "Impression du Courrier"
+msgid "Letter Generation"
 msgstr "Impression du Courrier"
 
 msgctxt "model:ir.action,name:receive_documents_wizard"
 msgid "Document Reception"
 msgstr "Réception de Document"
+
+msgctxt "model:ir.test_case.instance,name:extra_premium_kind_test_case"
+msgid "Extra Premium Kind Test Case"
+msgstr "Jeux d'essai Type de surprime"
+
+msgctxt "model:ir.test_case.instance,name:insurer_test_case"
+msgid "Insurer Test Case"
+msgstr "Jeux d'essai Assureur"
 
 msgctxt "model:ir.ui.menu,name:"
 msgid "Clauses"
@@ -2565,6 +2588,10 @@ msgstr "Type d'exclusion"
 msgctxt "model:ir.ui.menu,name:menu_extra_premium_kind"
 msgid "Extra Premium Kind"
 msgstr "Type de Surprime"
+
+msgctxt "model:ir.ui.menu,name:menu_insurer_form"
+msgid "Insurers"
+msgstr "Assureurs"
 
 msgctxt "model:ir.ui.menu,name:menu_item_desc_form"
 msgid "Item Descriptions"
@@ -2667,7 +2694,7 @@ msgid "Simple"
 msgstr "Simple"
 
 msgctxt "selection:billing.premium.rule,frequency:"
-msgid "Half Yearly"
+msgid "Half-yearly"
 msgstr "Semestriel"
 
 msgctxt "selection:billing.premium.rule,frequency:"
@@ -2687,8 +2714,16 @@ msgid "Quarterly"
 msgstr "Trimestriel"
 
 msgctxt "selection:billing.premium.rule,frequency:"
-msgid "Yearly"
-msgstr "Annuel"
+msgid "Yearly (360 days)"
+msgstr "Annuel (360 jours)"
+
+msgctxt "selection:billing.premium.rule,frequency:"
+msgid "Yearly (365 days)"
+msgstr "Annuel (365 jours)"
+
+msgctxt "selection:billing.premium.rule,frequency:"
+msgid "Yearly (Exact)"
+msgstr "Annuel (exact)"
 
 msgctxt "selection:billing.premium.rule,offered:"
 msgid "Option Description"
