--- a/modules/claim/locale/fr_FR.po
+++ b/modules/claim/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -9,6 +9,13 @@ msgstr "Veuillez déselectionner toutes les indemnités."
 msgctxt "error:claim.loss:"
 msgid "End Date is smaller than start date"
 msgstr "La date de fin est antérieure à la date de début"
+
+msgctxt "error:claim:"
+msgid ""
+"Impossible to find a main contract, please try again once it has been set"
+msgstr ""
+"Impossible de trouver un contrat principal, essayer de nouveau une fois "
+"celui ci définit"
 
 msgctxt "field:claim,claimant:"
 msgid "Claimant"
@@ -96,7 +103,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:claim,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:claim.indemnification,amount:"
 msgid "Amount"
@@ -196,7 +203,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:claim.indemnification,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:claim.indemnification.detail,amount:"
 msgid "Amount"
@@ -276,7 +283,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:claim.indemnification.detail,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:claim.indemnification.validate.display,amount:"
 msgid "Amount"
@@ -445,7 +452,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:claim.loss,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:contract.option,benefits:"
 msgid "Benefits"
@@ -570,6 +577,18 @@ msgstr "Numéroteur de Sinistre"
 msgctxt "model:ir.sequence.type,name:sequence_type_claim_number"
 msgid "Claim Number"
 msgstr "Type de séquence"
+
+msgctxt "model:ir.test_case.instance,name:document_desc_test_case"
+msgid "Document Desc Test Case"
+msgstr "Jeux d'essai Descripteur de document"
+
+msgctxt "model:ir.test_case.instance,name:event_desc_test_case"
+msgid "Event Desc Test Case"
+msgstr "Jeux d'essai Descripteur d'évenement"
+
+msgctxt "model:ir.test_case.instance,name:loss_desc_test_case"
+msgid "Loss Desc Test Case"
+msgstr "Jeux d'essai de descripteur de préjudice"
 
 msgctxt "model:ir.ui.menu,name:menu_claim"
 msgid "Claim"
@@ -774,10 +793,6 @@ msgstr "Sinistre"
 msgctxt "selection:document.request.line,for_object:"
 msgid "Delivered Service"
 msgstr "Prestation Fournie"
-
-msgctxt "selection:offered.option.description,family:"
-msgid ""
-msgstr " "
 
 msgctxt "selection:party.interaction,for_object_ref:"
 msgid "Claim"
