--- a/modules/clause/locale/fr_FR.po
+++ b/modules/clause/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -65,6 +65,10 @@ msgstr "Clause"
 msgctxt "model:ir.action,name:act_model_clause"
 msgid "Clauses"
 msgstr "Clauses"
+
+msgctxt "model:ir.test_case.instance,name:clause_test_case"
+msgid "Clause Test Case"
+msgstr "Jeux d'essai Clauses"
 
 msgctxt "model:ir.ui.menu,name:menu_model_clause"
 msgid "Clauses"
