--- a/modules/cog_utils/locale/fr_FR.po
+++ b/modules/cog_utils/locale/fr_FR.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:ir.test_case.instance:"
+msgid "Test Case %s uses the %s method, which does not exist !"
+msgstr "Le jeux d'essai%s utilise la méthode %s qui n'existe pas!"
+
 msgctxt "error:ir.test_case.run:"
 msgid "Cannot load test case file %s"
 msgstr "Impossible de charger le jeu d'essai du fichier %s"
@@ -206,6 +210,10 @@ msgctxt "field:ir.test_case,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
+msgctxt "field:ir.test_case,test_cases:"
+msgid "Test Cases"
+msgstr "Jeux de Test"
+
 msgctxt "field:ir.test_case,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
@@ -215,6 +223,110 @@ msgid "Write User"
 msgstr "Mis à jour par"
 
 msgctxt "field:ir.test_case,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:ir.test_case.instance,config:"
+msgid "Configuration"
+msgstr "Configuration"
+
+msgctxt "field:ir.test_case.instance,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:ir.test_case.instance,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:ir.test_case.instance,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:ir.test_case.instance,executed:"
+msgid "Executed"
+msgstr "Exécuté"
+
+msgctxt "field:ir.test_case.instance,execution_date:"
+msgid "Execution Date"
+msgstr "Date d'exécution"
+
+msgctxt "field:ir.test_case.instance,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:ir.test_case.instance,method_name:"
+msgid "Method Name"
+msgstr "Nom de la Méthode"
+
+msgctxt "field:ir.test_case.instance,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:ir.test_case.instance,name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:ir.test_case.instance,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:ir.test_case.instance,requirements:"
+msgid "Requirements"
+msgstr "Pré requis"
+
+msgctxt "field:ir.test_case.instance,test_method_name:"
+msgid "Test Method Name"
+msgstr "Nom de la méthode de test"
+
+msgctxt "field:ir.test_case.instance,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:ir.test_case.instance,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:ir.test_case.instance,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,child:"
+msgid "Child"
+msgstr "Donnée Liée"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,parent:"
+msgid "Parent"
+msgstr "Parent"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:ir.test_case.instance-ir.test_case.instance,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
@@ -266,17 +378,9 @@ msgctxt "field:ir.test_case.run.select.method,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ir.test_case.run.select.method,method_name:"
-msgid "Method Name"
-msgstr "Nom de la Méthode"
-
 msgctxt "field:ir.test_case.run.select.method,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
-
-msgctxt "field:ir.test_case.run.select.method,name:"
-msgid "Test Case Name"
-msgstr "Nom du jeu d'essai"
 
 msgctxt "field:ir.test_case.run.select.method,selected:"
 msgid "Will be executed"
@@ -285,6 +389,14 @@ msgstr "Sera exécuté"
 msgctxt "field:ir.test_case.run.select.method,selection:"
 msgid "Selection"
 msgstr "Sélection"
+
+msgctxt "field:ir.test_case.run.select.method,test:"
+msgid "Test"
+msgstr "Test"
+
+msgctxt "field:ir.test_case.run.select.method,test_case:"
+msgid "Test Case"
+msgstr "Jeu de Test"
 
 msgctxt "field:ir.ui.icon,xml_id:"
 msgid "XML Id"
@@ -354,6 +466,13 @@ msgctxt "field:utils.versionned_object,versions:"
 msgid "Versions"
 msgstr "Versions"
 
+msgctxt "help:ir.test_case.instance,test_method_name:"
+msgid ""
+"The name of the method that will be used to decide whether the Test Case "
+"should be run or not"
+msgstr ""
+"Le nom de la méthode utilisé pour décider si le jeux d'essai doit être lancé"
+
 msgctxt "model:account.account,name:"
 msgid "account.account"
 msgstr "Compte"
@@ -413,6 +532,22 @@ msgstr "Selecteur de fichier"
 msgctxt "model:ir.test_case,name:"
 msgid "Test Case Model"
 msgstr "Jeux d'essais"
+
+msgctxt "model:ir.test_case.instance,name:"
+msgid "Test Case Instance"
+msgstr "Instance de jeux d'essai"
+
+msgctxt "model:ir.test_case.instance,name:set_global_search"
+msgid "Set Global Search"
+msgstr "Définir la recherche globale"
+
+msgctxt "model:ir.test_case.instance,name:set_language_translatable"
+msgid "Set Language Translatable"
+msgstr "Définir les langues traduisibles"
+
+msgctxt "model:ir.test_case.instance-ir.test_case.instance,name:"
+msgid "Test Case Requirement Relation"
+msgstr "Pré requis des jeux d'essai"
 
 msgctxt "model:ir.test_case.run.select,name:"
 msgid "Select Test Case"
@@ -501,6 +636,14 @@ msgstr ""
 msgctxt "view:ir.import.select_file:"
 msgid "File Selection"
 msgstr "Sélection de Fichier"
+
+msgctxt "view:ir.test_case.instance:"
+msgid "Test Case Instance"
+msgstr "Instance de jeux d'essai"
+
+msgctxt "view:ir.test_case.instance:"
+msgid "Test Cases"
+msgstr "Jeux de Test"
 
 msgctxt "view:ir.test_case.run.select.file:"
 msgid "Test Case Files"
