--- a/modules/contract_insurance_process/locale/fr_FR.po
+++ b/modules/contract_insurance_process/locale/fr_FR.po
@@ -171,7 +171,7 @@ msgstr "Démarrer le processus"
 
 msgctxt "wizard_button:contract.subscribe,process_parameters,action:"
 msgid "Start Process (_k)"
-msgstr ""
+msgstr "Démarrer le processus (_k)"
 
 msgctxt "wizard_button:contract.subscribe,process_parameters,end:"
 msgid "Cancel"
