--- a/modules/country_cog/locale/fr_FR.po
+++ b/modules/country_cog/locale/fr_FR.po
@@ -74,6 +74,10 @@ msgctxt "model:ir.action,name:act_zipcode_form"
 msgid "ZipCode"
 msgstr "Code Postal"
 
+msgctxt "model:ir.test_case.instance,name:zip_code_test_case"
+msgid "Zip Code Test Case"
+msgstr "Jeux d'essai Code Postaux"
+
 msgctxt "model:ir.ui.menu,name:menu_zipcode_form"
 msgid "ZipCode"
 msgstr "Code Postal"
