--- a/modules/offered_life/locale/fr_FR.po
+++ b/modules/offered_life/locale/fr_FR.po
@@ -158,6 +158,18 @@ msgctxt "model:ir.action,name:act_model_salary_range"
 msgid "Salary Range"
 msgstr "Tranche"
 
+msgctxt "model:ir.test_case.instance,name:ceiling_rule_test_case"
+msgid "Ceiling Rule Test Case"
+msgstr "Jeux d'essai "
+
+msgctxt "model:ir.test_case.instance,name:extra_data_test_case"
+msgid "Extra Data Test Case"
+msgstr "Jeux d'essai Données complémentaires"
+
+msgctxt "model:ir.test_case.instance,name:salary_range_test_case"
+msgid "Salary Range Test Case"
+msgstr "Jeux d'essai "
+
 msgctxt "model:ir.ui.menu,name:menu_model_salary_range"
 msgid "Salary Range"
 msgstr "Tranche"
